python-yaql (1.1.1-1) UNRELEASED; urgency=medium

  * New upstream release
  * Standards-Version is 3.9.8 now (no change)
  * d/rules: Changed UPSTREAM_GIT to new URL
  * d/copyright: Changed source URL to new one
  * Enabled autopkgtest-pkg-python testsuite

 -- Ondřej Nový <novy@ondrej.org>  Sat, 09 Apr 2016 19:31:49 +0200

python-yaql (1.1.0-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 16:35:04 +0000

python-yaql (1.1.0-1) experimental; urgency=medium

  [ Corey Bryant ]
  * New upstream release.
  * d/control: Align (Build-)Depends with upstream and update uploaders.

  [ Ondřej Nový ]
  * Fixed VCS URLs (https).

  [ Thomas Goirand ]
  * Standards-Version: 3.9.7 (no change).
  * Fixed debian/copyright ordering.

 -- Thomas Goirand <zigo@debian.org>  Fri, 04 Mar 2016 01:40:02 +0800

python-yaql (1.0.2-1) experimental; urgency=medium

  * New upstream release.
  * Removed doc patches.

 -- Thomas Goirand <zigo@debian.org>  Thu, 10 Dec 2015 10:45:25 +0100

python-yaql (1.0.1-7) unstable; urgency=medium

  * override_dh_python3 to fix Py3 shebang.

 -- Thomas Goirand <zigo@debian.org>  Fri, 23 Oct 2015 23:59:20 +0000

python-yaql (1.0.1-6) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Fri, 16 Oct 2015 12:31:26 +0000

python-yaql (1.0.1-5) experimental; urgency=medium

  * Fixed non-ascii chars in README.rst causing FTBFS in Jessie by adding
    upstream patch: Documentation_structure_update.patch.

 -- Thomas Goirand <zigo@debian.org>  Wed, 16 Sep 2015 13:34:46 +0200

python-yaql (1.0.1-4) experimental; urgency=medium

  * Fixed long description (Close: #792694).

 -- Thomas Goirand <zigo@debian.org>  Mon, 14 Sep 2015 11:40:31 +0000

python-yaql (1.0.1-3) experimental; urgency=medium

  * Added missing --with python3.

 -- Thomas Goirand <zigo@debian.org>  Sat, 12 Sep 2015 20:10:55 +0000

python-yaql (1.0.1-2) experimental; urgency=medium
